--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+:root{
+--primary-white: #fff;
+--primary-orange: #f9ab00;
+--primary-dark:  rgba(255,255,255,0)
+}
+
+body{
+  font-family: "Roboto Condesed" sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +48,40 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.logo{
+  width: 4rem;
+}
+
+nav a.nav-link{
+  /* font-weight: 500; */
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li{
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white)!important;
+  border-top: 0.1875rem solid var(--primary-dark);  
+}
+
+/* .navbar-brand{
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 6rem !important;
+} */
+
+.navbar-nav > li > a.active , .navbar-nav > li > a.active:focus {
+
+  border-top: 0.1875rem solid var(--primary-white);
+
+}
+.navbar-nav > li > a:hover{
+  border-top: 0.1875rem solid var(--primary-white);
 }
