--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
 
 :root{
 --primary-white: #fff;
 --primary-orange: #f9ab00;
---primary-dark:  rgba(255,255,255,0)
+--primary-dark:  rgba(255,255,255,0);
+--prinary-red: #ef4035;
+--primary-hover-red: #f33501;
 }
 
 body{
@@ -53,6 +55,11 @@ body{
 .logo{
   width: 4rem;
 }
+/* .......................navbar............................. */
+
+nav{
+  z-index: 2;
+}
 
 nav a.nav-link{
   /* font-weight: 500; */
@@ -84,4 +91,83 @@ nav ul li{
 }
 .navbar-nav > li > a:hover{
   border-top: 0.1875rem solid var(--primary-white);
+}
+
+/* .......................header............................. */
+
+.header-wraper{
+  position: relative;
+  background: url(wall-and-laptop-background.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info{
+  display: flex;
+  position:absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condesed" sans-serif;
+  z-index: 1;
+}
+.main-info h1{
+  color: var(--primary-white);
+  text-transform: uppercase;
+}
+
+
+
+/* .......................Typed-text............................. */
+.typed-text{
+  font-size: 2rem;
+  color: var(--primary-orange);
+  text-transform: none;
+
+}
+
+@media(max-width: 768px) {
+
+  .main-info h1{
+    font-size: 1.5rem !important;
+  }
+  .typed-text{
+    font-size: 1.3rem !important;
+  }
+}
+/* ......................header main offer............................. */
+
+.btn-main-offer{
+  border: 1px solid var(--prinary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+color: var(--primary-white);
+margin: 2rem;
+}
+
+.btn-main-offer:hover{
+  text-decoration: none;
+  background-color: var(--prinary-red);
+  transition: 0.2s ease-in-out;
+}
+/* ......................particle js............................. */
+.tsparticles-canvas-el{
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media(max-width:768px){
+  .particles-canvas{
+    display: none;
+
+  }
 }
