--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 body{
-  font-family: "Roboto Condesed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif !important;
 }
 
 .App {
@@ -114,7 +114,6 @@ nav ul li{
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Roboto Condesed" sans-serif;
   z-index: 1;
 }
 .main-info h1{
@@ -168,6 +167,34 @@ margin: 2rem;
 @media(max-width:768px){
   .particles-canvas{
     display: none;
+
+  }
+}
+
+/* .......................about me............................. */
+
+
+.photo-wrap{
+  display: flex;
+  justify-content: center;
+   align-items: center;
+}
+.profile-img{
+  width: 16rem;
+  border-radius: 50%;
+  padding: 0.3rem;
+  border: 1px solid var(--primary-orange);
+}
+
+.about-heading{
+  color: var(--primary-orange);
+  text-transform: uppercase;
+
+}
+
+@media(max-width: 468px){
+  .profile-img{
+    width: 10rem;
 
   }
 }
