--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
 
 
 :root{
---primary-white: #fff;
+--primary-white: #ffffff;
+--primary-light-gray: #f4f4f4;
 --primary-orange: #f9ab00;
---primary-dark:  rgba(255,255,255,0);
+--primary-dark:  rgba(52,58,64);
 --prinary-red: #ef4035;
 --primary-hover-red: #f33501;
 }
@@ -197,4 +198,57 @@ margin: 2rem;
     width: 10rem;
 
   }
+}
+
+/* .......................Services............................. */
+
+
+.services{
+  text-align: center;
+  padding-bottom: 2rem;
+  background: var(--primary-light-gray);
+}
+
+.services h1{
+  color: var(--primary-dark);
+  text-transform: uppercase;
+}
+.services .circle{
+  position: relative;
+  margin: 0.375rem auto;
+  background: var(--primary-orange);
+  border-radius: 50%;
+  width: 3.125rem;
+  height: 3.125rem;
+}
+.services .icon{
+  font-size: 1.4rem;
+  color: var(--primary-white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.services .box{
+  height: 16rem;
+  border-bottom: 5px solid var(--primary-orange);
+  padding: 0.625rem;
+  margin-bottom: 1.875rem;
+  background: var(--primary-white);
+
+}
+.services .box:hover{
+  background: var(--primary-orange);
+  border-bottom: 5px solid var(--primary-dark);
+}
+
+.services .box:hover .icon{
+  color: var(--primary-dark);
+}
+.services .box:hover .circle{
+  background: var(--primary-white);
+}
+.services .box:hover p{
+  color: var(--primary-white);
 }
