--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 :root{
 --primary-white: #ffffff;
 --primary-light-gray: #f4f4f4;
+--primary-gray: #ccd1d9;
+--primary-dark-gray: #666666;
 --primary-orange: #f9ab00;
 --primary-dark:  rgba(52,58,64);
 --prinary-red: #ef4035;
@@ -252,3 +254,100 @@ margin: 2rem;
 .services .box:hover p{
   color: var(--primary-white);
 }
+
+/* .......................experience............................. */
+.experience{
+  padding: 0.7rem;
+
+}
+
+
+.experience-wrapper{
+  position: relative;
+  padding: 3.125rem 0;
+  overflow: hidden;
+
+
+}
+
+.experience h1{
+  text-transform: uppercase;
+  color: var(--primary-orange);
+
+}
+.experience-wrapper::before{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width: 0.125rem;
+  height: 100%;
+  background: var(--primary-gray);
+  z-index: 1;
+
+}
+
+.timeline-block{
+  width: calc(50%  + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+
+}
+.timeline-block-right{
+  float: right;
+
+}
+
+.timeline-block-left{
+  float: left;
+  direction: rtl;
+  
+}
+.marker{
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.3125rem solid var(--primary-dark);
+  background: var(--primary-orange);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content{
+  width: 95%;
+  padding: 0.09375rem;
+  color: var(--primary-dark-gray);
+  direction: ltr;
+}
+.timeline-content h3{
+  margin-top: 0.3125rem;
+  color: var(--prinary-red);
+  font-weight: 900;
+}
+/* ..........media..................*/
+
+@media(max-width: 768px){
+
+.experience .container{
+  padding-left: 0;
+}
+
+  .experience-wrapper::before{
+    left: 0.5rem;
+    margin-bottom: 1.875rem;
+
+
+  }
+  .timeline-block-right{
+    float: none;
+    width: 100%;
+  }
+  .timeline-block-left{
+    float: none;
+   direction: ltr;
+   width: 100%;
+  }
+}
+
