--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 --primary-dark:  rgba(52,58,64);
 --prinary-red: #ef4035;
 --primary-hover-red: #f33501;
+--primary-black: #000000;
 }
 
 body{
@@ -238,6 +239,7 @@ margin: 2rem;
   padding: 0.625rem;
   margin-bottom: 1.875rem;
   background: var(--primary-white);
+  transition: 0.3s ease-in-out;
 
 }
 .services .box:hover{
@@ -350,4 +352,104 @@ margin: 2rem;
    width: 100%;
   }
 }
+/* .......................portfolio............................. */
 
+.portfolio-wrapper{
+  background: var(--primary-light-gray);
+  padding: 3rem 0;
+
+
+}
+.portfolio-wrapper h1{
+  color: var(--primary-orange);
+}
+
+.portfolio-image{
+  width: 15rem;
+  border: 1px solid var(--primary-orange);
+  padding: 0 0.5rem;
+  
+}
+
+.portfolio-image-box{
+  position: relative;
+  margin: 1rem;
+}
+
+/* ......................overflow............................. */
+
+.overflow{
+  position: absolute;
+  opacity: 0;
+  background: var(--primary-black);
+  width: 15rem;
+  height: 8rem;
+  top: 0;
+  border: 1px solid var(--prinary-red);
+  cursor: pointer;
+
+}
+
+.portfolio-image-box:hover .overflow{
+  opacity: 60%;
+  transition: 0.3s ease-in-out;
+
+}
+.portfolio-icon{
+  position: absolute;
+  opacity: 0;
+  margin-left: -8rem;
+  margin-top: 3.6rem;
+  color: var(--primary-orange);
+  font-size: 1.5rem;
+}
+
+.portfolio-image-box:hover .portfolio-icon{
+  opacity: 70%;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+/* overflow box */
+
+.portfolio-image-popupbox{
+  width: 45rem;
+  padding: 0.05rem;
+}
+.hyper-link{
+  cursor: pointer;
+  color: var(--primary-orange);
+}
+.hyper-link:hover{
+  color: var(--primary-hover-red);
+  
+}
+/* media */
+
+@media(max-width: 768px){
+  .portfolio-image-popupbox{
+    width: 100%;
+  }
+}
+
+@media(max-height: 570px){
+
+  .popupbox-wrapper{
+    height: 100%;
+  }
+  .portfolio-image-popupbox{ 
+    width: 50%;
+  }
+
+}
+
+@media(max-height: 280px){
+
+  .popupbox-wrapper{
+    height: 90%;
+  }
+  .portfolio-image-popupbox{ 
+    width: 30%;
+  }
+
+}
