--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 --prinary-red: #ef4035;
 --primary-hover-red: #f33501;
 --primary-black: #000000;
+--primary-transparent-black:rgba(0,0,0,0.7);
 }
 
 body{
@@ -452,4 +453,63 @@ margin: 2rem;
     width: 30%;
   }
 
+}
+
+/* testimonials */
+
+.testimonials{
+  background-image: url(testimonials-bg.jpg);
+  background-size: cover;
+  background-color: var(--primary-black);
+  text-align: center;
+  padding-bottom: 4rem;
+  margin-bottom: 0;
+  width: 100%;
+}
+.testimonials h1{
+  color: var(--primary-orange);
+  padding: 3rem 0;
+  text-transform: uppercase;
+
+}
+
+.testimonials-content{
+  text-align: center;
+  max-width: 53.125rem;
+  margin: 0 auto 2rem auto;
+  background-color: var(--primary-transparent-black) ;
+}
+.myCarousel{
+  color: var(--primary-white);
+  background: transparent;
+  margin-top: -6;
+  width: 54%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 6%;
+  padding-bottom: 8%;
+  padding-left: 5%;
+  padding-right: 5%;
+  height: 17.875rem;
+
+}
+
+.myCarousel h3{
+  color: var(--primary-orange);
+  font-weight: 600;
+  text-transform: uppercase;
+
+}
+
+.myCarousel p{
+  color: var(--primary-gray);
+}
+
+.carousel .slide img{
+  width: 10rem !important;
+  border-radius: 50%;
+  
+}
+.carousel-root{
+  margin: auto !important;
 }
