--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 --primary-hover-red: #f33501;
 --primary-black: #000000;
 --primary-transparent-black:rgba(0,0,0,0.7);
+--primary-green: #03f137;
 }
 
 body{
@@ -512,4 +513,112 @@ margin: 2rem;
 }
 .carousel-root{
   margin: auto !important;
+}
+
+/* contact me  */
+
+.contacts{
+  background: var(--primary-transparent-black);
+  padding: 3rem 0;
+
+}
+
+.contacts h1{
+  color: var(--primary-orange);
+  padding: 1.3rem 0;
+  text-transform: uppercase;
+
+}
+
+.contacts p{
+  color: var(--primary-light-gray);
+  font-size: 1.2rem;
+}
+
+/* inputs */
+
+.contacts input, .contacts textarea{
+  width: 100%;
+  box-sizing: border-box;
+  background: none;
+  border: 0;
+  border-bottom: 0.125rem solid var(--primary-dark-gray);
+  border-radius: 0;
+  color: var(--primary-orange);
+  outline: 0 !important;
+  box-shadow: none !important;
+  top: 0;
+  margin-bottom: 1rem;
+  padding-left: 0 !important;
+
+}
+
+.contacts .container{
+
+  padding: 4rem 0;
+  
+}
+
+.contacts input:focus, .contacts textarea:focus{
+  background: transparent;
+  color: var(--primary-orange);
+   border-bottom: 0.125rem solid var(--primary-orange);
+}
+
+.contacts textarea{
+  height: 12.2rem !important;
+
+}
+.contact-btn{
+  margin: 1rem 0 0 0;
+  width: 100%;
+  background: none;
+
+}
+
+.line{
+  position: relative;
+  width: 0;
+  height: 0.125;
+  background: var(--primary-orange);
+  display: inline-block;
+  top: -0.8rem;
+}
+input:focus+.line, textarea:focus+.line{
+  width: 100%;
+  transition: width 0.8s ease-in-out;
+}
+
+input.form-control{
+  margin: -0.3rem 0;
+}
+textarea.form-control{
+  margin: -0.3rem 0;
+}
+.error-message{
+  color: var(--primary-white);
+  background: var(--primary-hover-red);
+  text-align: left;
+
+}
+.success-message{
+  font-weight: 900;
+  color: var(--primary-orange);
+}
+
+/* media */
+
+@media(max-width: 768px){
+
+  .contacts{
+    overflow: hidden;
+  }
+   .contacts .container{
+     padding: 0 1rem;
+   }
+
+   .contacts p{
+     padding: 0 0.4rem;
+   }
+
 }
