--- a/src/App.css
+++ b/src/App.css
@@ -90,13 +90,13 @@ nav ul li{
   height: 6rem !important;
 } */
 
-.navbar-nav > li > a.active , .navbar-nav > li > a.active:focus {
+.navbar-nav > li > a.active , .navbar-nav > li > a:focus {
 
-  border-top: 0.1875rem solid var(--primary-white);
+  border-top: 0.1875rem solid var(--primary-orange);
 
 }
 .navbar-nav > li > a:hover{
-  border-top: 0.1875rem solid var(--primary-white);
+  border-top: 0.1875rem solid var(--primary-orange);
 }
 
 /* .......................header............................. */
